--- a/ChattoAdditions/Source/Input/ChatInputBar.xib
+++ b/ChattoAdditions/Source/Input/ChatInputBar.xib
@@ -54,7 +54,7 @@
                         <constraint firstAttribute="height" constant="34" id="9km-tD-ZFh"/>
                         <constraint firstAttribute="width" constant="34" id="JeX-ov-P8o"/>
                     </constraints>
-                    <state key="normal" image="send"/>
+                    <state key="normal" backgroundImage="send"/>
                     <connections>
                         <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="9hi-0N-Y5F"/>
                     </connections>
