--- a/ChattoAdditions/Source/Input/ChatInputBar.xib
+++ b/ChattoAdditions/Source/Input/ChatInputBar.xib
@@ -14,22 +14,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vlk-9J-bj7">
-                    <rect key="frame" x="55" y="10" width="440" height="103"/>
+                    <rect key="frame" x="55" y="10" width="460" height="103"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                             <integer key="value" value="12"/>
                         </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
-                            <real key="value" value="0.5"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
-                            <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fsh-hH-hKG" userLabel="TextView" customClass="ExpandableTextView" customModule="ChattoAdditions" customModuleProvider="target">
-                    <rect key="frame" x="70" y="10" width="410" height="103"/>
+                    <rect key="frame" x="70" y="10" width="430" height="103"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -52,14 +46,14 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hdi-4X-fkC">
-                    <rect key="frame" x="510" y="44.5" width="60" height="34"/>
+                    <rect key="frame" x="525" y="44.5" width="60" height="34"/>
                     <state key="normal" image="voice"/>
                     <connections>
                         <action selector="voiceButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="gSs-YP-Puc"/>
                     </connections>
                 </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hE9-hU-Ci1">
-                    <rect key="frame" x="510" y="44.5" width="60" height="34"/>
+                    <rect key="frame" x="525" y="44.5" width="60" height="34"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="34" id="9km-tD-ZFh"/>
@@ -91,16 +85,17 @@
                 <constraint firstItem="hdi-4X-fkC" firstAttribute="centerY" secondItem="hE9-hU-Ci1" secondAttribute="centerY" id="QPo-US-gW5"/>
                 <constraint firstItem="Vlk-9J-bj7" firstAttribute="bottom" secondItem="fsh-hH-hKG" secondAttribute="bottom" id="YcM-nm-9fu"/>
                 <constraint firstItem="fsh-hH-hKG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="ZsI-iu-9nR"/>
-                <constraint firstAttribute="trailing" secondItem="hE9-hU-Ci1" secondAttribute="trailing" constant="30" id="bf0-QN-wTh"/>
+                <constraint firstAttribute="trailing" secondItem="hE9-hU-Ci1" secondAttribute="trailing" constant="15" id="bf0-QN-wTh"/>
                 <constraint firstItem="hdi-4X-fkC" firstAttribute="top" secondItem="hE9-hU-Ci1" secondAttribute="top" id="cfx-gv-lzE"/>
                 <constraint firstItem="hdi-4X-fkC" firstAttribute="leading" secondItem="hE9-hU-Ci1" secondAttribute="leading" id="cv6-dJ-J6M"/>
                 <constraint firstItem="hdi-4X-fkC" firstAttribute="trailing" secondItem="hE9-hU-Ci1" secondAttribute="trailing" id="u4c-mk-XJY"/>
-                <constraint firstAttribute="trailing" secondItem="fsh-hH-hKG" secondAttribute="trailing" constant="120" id="vVY-rg-Rwc"/>
+                <constraint firstAttribute="trailing" secondItem="fsh-hH-hKG" secondAttribute="trailing" constant="100" id="vVY-rg-Rwc"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="bgView" destination="Vlk-9J-bj7" id="Fj4-6M-cz6"/>
                 <outlet property="sendButton" destination="hE9-hU-Ci1" id="VFQ-Pb-J37"/>
                 <outlet property="textView" destination="fsh-hH-hKG" id="QMH-G9-ADs"/>
                 <outlet property="voiceButton" destination="hdi-4X-fkC" id="NUB-M5-Goh"/>
